# coursework

./: .gitignore  README.md
AI标书/作业提交/小组研究/知识检索小组/lesson-01/任务1参考/: .gitignore  Cargo.toml  README.md  实验报告.md
AI标书/作业提交/小组研究/知识检索小组/lesson-01/任务1参考/.cargo/: config.toml
AI标书/作业提交/小组研究/知识检索小组/lesson-01/任务1参考/src/: main.rs
AI标书/课程资料/共同部分/Agent入门/: Agent入门课程.pptx
AI标书/课程资料/共同部分/Rust课程/: README.md
AI标书/课程资料/共同部分/Rust课程/代码/: Cargo.toml  README.md
AI标书/课程资料/共同部分/Rust课程/代码/ai-client/: Cargo.toml
AI标书/课程资料/共同部分/Rust课程/代码/ai-client/examples/: demo.rs
AI标书/课程资料/共同部分/Rust课程/代码/ai-client/src/: lib.rs
AI标书/课程资料/共同部分/Rust课程/代码/lesson-01/: Cargo.toml
AI标书/课程资料/共同部分/Rust课程/代码/lesson-01/src/: main.rs
AI标书/课程资料/共同部分/Rust课程/代码/lesson-02/: Cargo.toml
AI标书/课程资料/共同部分/Rust课程/代码/lesson-02/src/: main.rs
AI标书/课程资料/共同部分/Rust课程/代码/lesson-03/: Cargo.toml  config.example
AI标书/课程资料/共同部分/Rust课程/代码/lesson-03/src/: main.rs
AI标书/课程资料/共同部分/Rust课程/代码/lesson-04/: Cargo.toml
AI标书/课程资料/共同部分/Rust课程/代码/lesson-04/src/: main.rs
AI标书/课程资料/小组研究/: 专项课程统一学习规范.md
AI标书/课程资料/小组研究/Agent深度实战/: README.md  lesson-01-react-loop.md  lesson-02-tool-use.md  lesson-03-agentic-rag-planning.md  lesson-04-multi-agent.md  lesson-05-capstone.md
AI标书/课程资料/小组研究/Prompt工程实战/: README.md  lesson-01-token-generation.md  lesson-02-system-prompt.md  (+3 more)
AI老师/: 王成媛 即时讲课.md
AI老师/个人介绍/: 冼湘宜.txt  刘楷钦.txt  周贺浚.txt  孔维诚.txt  谢兴坤.txt
AI老师/模块文档/: 做题模块  刘金华模块文档.md  吴敏希-上下文记忆需求文档.md  周贺浚_M7_需求文档.md  张梓鸿-M6上下文记忆-模块文档.md  拍照答疑+AI讲题（孔维诚）.md  杜恩泽-模块文档  苏杰-AI备课.md  谢兴坤-M5AI备课.md  阳睿-M2_拍照答疑与讲题_开发文档.md
(+206 files in other folders)
