[workspace]
resolver = "3"
members = [
    "lesson-01",
    "lesson-02",
    "lesson-03",
    "lesson-04",
    "ai-client",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
